refactor: returning read object from when getting specific list
